--- a/OpenDSS to ePHASORSIM.ipynb
+++ b/OpenDSS to ePHASORSIM.ipynb
@@ -207,7 +207,7 @@
     "    headers = [0]\n",
     "    if str(x) == 'Multiphase Transformer':\n",
     "        headers=[0, 1]\n",
-    "    temp = pd.read_excel('/Users/dvaidhyn/Desktop/ACES-COSIM/fy19cosim/aces-simulations/nodes/nodes-sce/temp/Open_dss_model_08_22_2018/ConvertedFiles/Template_V1_6.xls',sheet_name=x,header=headers)\n",
+    "    temp = pd.read_excel('Template_V1_6.xls',sheet_name=x,header=headers)\n",
     "    sheet_name_cols[str(x)] = list(temp.columns.values)"
    ]
   },
